# rc25_ws

./: .gitignore  README.md
3D/: CFFFP_RoboCol25-Bd20Mnt.gcode  CFFFP_RoboCol25-Bd25Mnt.gcode  CFFFP_RoboCol25-CamMount.gcode  CFFFP_RoboCol25-GpsCap.gcode  CFFFP_RoboCol25-GpsMnt.gcode  CFFFP_RoboCol25-HubMnt.gcode  CFFFP_RoboCol25-ImuMnt.gcode  CFFFP_RoboCol25-LidarMnt.gcode  CFFFP_RoboCol25-LidarMntTemplate.gcode  CFFFP_RoboCol25-PiMnt.gcode  CFFFP_RoboCol25-PlatformRearAttach.gcode  CFFFP_RoboCol25-PwrMuxMntx4.gcode  CFFFP_RoboCol25-RoutMnt.gcode  CFFFP_RoboCol25-VregClip2.gcode  CFFFP_RoboCol25-WifiAntennaMnt.gcode  CFFFP_RoboCol25-pwrMnt.gcode  CFFFP_RoboCol25-tofMntTop.gcode  CFFFP_RoboCol25-tofMount.gcode  CFFFP_RoboCol25_podMount.gcode  MS26.20251201-102139.FCBak  MS26.FCStd  Rob0Col25_PlatformRearAttach.20250709-102157.FCBak  RoboCol25-Bd20Mnt.3mf  RoboCol25-Bd25Mnt.3mf  RoboCol25-CamMount.3mf  RoboCol25-GpsCap.3mf  RoboCol25-GpsImuMnt.3mf  RoboCol25-GpsMnt.3mf  RoboCol25-HubMnt.3mf  RoboCol25-ImuMnt.3mf  RoboCol25-LidarMnt.3mf  RoboCol25-PiMnt.3mf  RoboCol25-PlatformRearAttach.amf  RoboCol25-RoutMnt.3mf  (+12 more)
src/robocolumbus25_stuff/: package.xml  setup.cfg  setup.py
src/robocolumbus25_stuff/launch/: rc25_gps_localization_launch.py  robocolumbus25_bringup_launch.py
src/robocolumbus25_stuff/robocolumbus25_stuff/: robocolumbus25_cone_node.py  robocolumbus25_controller_node.py  robocolumbus25_imu_gps_node.py  robocolumbus25_nav_node.py  robocolumbus25_speaker_node.py  robocolumbus25_teleop_node.py  robocolumbus25_tof_node.py  robocolumbus25_wheel_controler_node.py
(+88 files in other folders)
