<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robocolumbus25_stuff</name>
  <version>0.0.0</version>
  <description>Robocolumbus 1/6 scale jeep wheel controller</description>
  <maintainer email="mikew@todo.todo">mikew</maintainer>
  <license>TODO: License declaration</license>

  <!-- <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend> -->

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pyserial</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
